--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,8 @@
 # Site Settings
 name: Blake Stewart
-title: Blake Stewart | Student
-description: Personal Portfolio.
+title: Blake Stewart | A Personal Portfolio.
+description: Jekflix is a template for Jekyll inspired by Netflix and made by
+  Thiago Rossener.
 tags:
   - blog
   - template
@@ -18,7 +19,7 @@ menu:
     url: /contact
   - title: Feed
     url: /feed.xml
-email: blakestewart092@gmail.com
+email: youremail@test.com
 # See: https://disqus.com/
 disqus_username: disqus_username
 # Contact Form Setting
@@ -45,7 +46,7 @@ two_columns_layout: true
 
 # Advanced Settings
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://bl9kes.github.io" # the base hostname & protocol for your site
+url: "" # the base hostname & protocol for your site
 google_analytics: "UA-XXXXXXXX-X"
 language: "en"
 categories_folder: category
